# protobuf-parser-tool

./: LICENSE  README.md  example_person.py
c++/: CMakeLists.txt  example_person  example_person.cpp  make.sh
c++/proto_buf/: General_buf_read.h  General_buf_write.h
c++/proto_pb2/: CMakeLists.txt
c++/protobuf/lib/: libprotobuf-lite.la  libprotobuf.la
c++/protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
prebuild/: Person.pb.cc  Person.pb.h  Person.proto  make.sh
proto_buf/: Person_buf_write.py
proto_pb2/: Person_pb2.py
python/: example_person.py
python/data/: Person_test.proto
python/proto_buf/: General_buf_read.py
